--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="https://kit.fontawesome.com/14e579c156.js" crossorigin="anonymous"></script>
  
-    <title>Contact-Pro Manager</title>
+    <title>Contact Manager Pro</title>
   </head>
   <body>
     <div id="root"></div>
